WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75643
WK2: Safari fails to open a PostScript file in Preview from context menu
https://bugs.webkit.org/show_bug.cgi?id=75643
Summary
WK2: Safari fails to open a PostScript file in Preview from context menu
Alexey Proskuryakov
Reported
2012-01-05 12:27:47 PST
Steps to Reproduce: 1. Load this URL into Safari:
http://www.cerc.utexas.edu/~vinod/pubs/ultrascalar-arvlsi-99.ps
2. Right-click on the document and select "Open with Preview.app". 3. Observe that this fails. <
rdar://problem/9823430
>
Attachments
proposed fix
(1.72 KB, patch)
2012-01-05 12:31 PST
,
Alexey Proskuryakov
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-01-05 12:31:14 PST
Created
attachment 121312
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2012-01-05 12:48:33 PST
Committed <
http://trac.webkit.org/r104198
>.
Darin Adler
Comment 3
2012-01-08 19:55:51 PST
Comment on
attachment 121312
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=121312&action=review
> Source/WebKit2/UIProcess/API/mac/PDFViewController.mm:455 > + m_suggestedFilename = String(suggestedFilename + ".pdf");
I don’t think the String() is needed here.
Alexey Proskuryakov
Comment 4
2012-01-08 22:06:32 PST
> > Source/WebKit2/UIProcess/API/mac/PDFViewController.mm:455 > > + m_suggestedFilename = String(suggestedFilename + ".pdf"); > > I don’t think the String() is needed here.
It didn't build otherwise. A result of adding two Strings is a class that can only be converted to String, not NSString. Maybe we should teach it to support NSString.
Darin Adler
Comment 5
2012-01-08 22:31:53 PST
(In reply to
comment #4
)
> > > Source/WebKit2/UIProcess/API/mac/PDFViewController.mm:455 > > > + m_suggestedFilename = String(suggestedFilename + ".pdf"); > > > > I don’t think the String() is needed here. > > It didn't build otherwise. A result of adding two Strings is a class that can only be converted to String, not NSString. Maybe we should teach it to support NSString.
I see. Didn’t realize that m_suggestedFilename was an NSString.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug