        WK2: Safari fails to open a PostScript file in Preview from context menu         https://bugs.webkit.org/show_bug.cgi?id=75643         <rdar://problem/9823430>

Reviewed by Dan Bernstein.

        * UIProcess/API/mac/PDFViewController.mm: (WebKit::PDFViewController::setPDFDocumentData):
        Append ".pdf" to file name when converting data, as suggested file name is created for
        original MIME type.



Canonical link: https://commits.webkit.org/92441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104198 268f45cc-cd09-0410-ab3c-d52691b4dbfc